# flexapi-client-python

./: .gitignore  LICENSE  Makefile  README.md  dev-requirements.txt  requirements.txt  setup.cfg  setup.py
flexapi_client/: __init__.py  config.py  flexapi.py  hawk.py
