[metadata]
name = flexapi-client
version = 0.1
author = Dan Cech
author-email = dcech@corp.nac.net
summary = FlexAPI Client
url = http://www.nac.net
description-file = README.md
license = MIT
include_package_data = True,
zip_safe = False
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
	License :: OSI Approved
	License :: OSI Approved :: MIT License
[files]
packages =
    flexapi_client
[entry_points]
console_scripts =
    flexcli = flexapi_client.bin.flexcli:main
